Add Open Source Operator version

--- a/hazelcast-enterprise-operator-rhel.yaml
+++ b/hazelcast-enterprise-operator-rhel.yaml
@@ -1,28 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hazelcast-enterprise-operator
+  name: hazelcast-operator
   labels:
-    app.kubernetes.io/name: hazelcast-enterprise-operator
-    app.kubernetes.io/instance: hazelcast-enterprise-operator
-    app.kubernetes.io/managed-by: hazelcast-enterprise-operator
+    app.kubernetes.io/name: hazelcast-operator
+    app.kubernetes.io/instance: hazelcast-operator
+    app.kubernetes.io/managed-by: hazelcast-operator
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: hazelcast-enterprise-operator
+      app.kubernetes.io/name: hazelcast-operator
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: hazelcast-enterprise-operator
-        app.kubernetes.io/instance: hazelcast-enterprise-operator
-        app.kubernetes.io/managed-by: hazelcast-enterprise-operator
+        app.kubernetes.io/name: hazelcast-operator
+        app.kubernetes.io/instance: hazelcast-operator
+        app.kubernetes.io/managed-by: hazelcast-operator
       annotations:
-        productID: hazelcast-enterprise-operator
+        productID: hazelcast-operator
         productName: Hazelcast Enterprise Operator
         productVersion: 0.2.6
     spec:
-      serviceAccountName: hazelcast-enterprise-operator
+      serviceAccountName: hazelcast-operator
       securityContext:
         capabilities:
           drop:
@@ -37,8 +37,8 @@ spec:
                 values:
                 - amd64
       containers:
-        - name: hazelcast-enterprise-operator
-          image: registry.connect.redhat.com/hazelcast/hazelcast-enterprise-operator:0.2.6
+        - name: hazelcast-operator
+          image: registry.connect.redhat.com/hazelcast/hazelcast-operator:0.2.7
           imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
@@ -50,7 +50,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
-              value: "hazelcast-enterprise-operator"
+              value: "hazelcast-operator"
             - name: RELATED_IMAGE_HAZELCAST
               value: registry.connect.redhat.com/hazelcast/hazelcast-4-rhel8:4.0-1
             - name: RELATED_IMAGE_MANCENTER
