--- a/hazelcast-enterprise-operator-docker-hub.yaml
+++ b/hazelcast-enterprise-operator-docker-hub.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/name: hazelcast-operator
     app.kubernetes.io/instance: hazelcast-operator
-    app.kubernetes.io/managed-by: hazelast-operator
+    app.kubernetes.io/managed-by: hazelcast-operator
 spec:
   replicas: 1
   selector:
@@ -38,7 +38,7 @@ spec:
                 - amd64
       containers:
         - name: hazelcast-operator
-          image: hazelcast/hazelcast-operator:0.2.1
+          image: hazelcast/hazelcast-enterprise-operator:0.3.0
           imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
@@ -54,7 +54,7 @@ spec:
             - name: RELATED_IMAGE_HAZELCAST
               value: hazelcast/hazelcast-enterprise:4.0.1
             - name: RELATED_IMAGE_MANCENTER
-              value: hazelcast/management-center:4.0.1
+              value: hazelcast/management-center:4.0.2
           resources:
             limits:
               cpu: "0.1"
