--- a/hazelcast-operator-rbac.yaml
+++ b/hazelcast-operator-rbac.yaml
@@ -1,22 +1,22 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: hazelcast-enterprise-operator
+  name: hazelcast-operator
   labels:
-    app.kubernetes.io/name: hazelcast-enterprise-operator
-    app.kubernetes.io/instance: hazelcast-enterprise-operator
-    app.kubernetes.io/managed-by: hazelcast-enterprise-operator
+    app.kubernetes.io/name: hazelcast-operator
+    app.kubernetes.io/instance: hazelcast-operator
+    app.kubernetes.io/managed-by: hazelcast-operator
 
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: hazelcast-enterprise-operator
+  name: hazelcast-operator
   labels:
-    app.kubernetes.io/name: hazelcast-enterprise-operator
-    app.kubernetes.io/instance: hazelcast-enterprise-operator
-    app.kubernetes.io/managed-by: hazelcast-enterprise-operator
+    app.kubernetes.io/name: hazelcast-operator
+    app.kubernetes.io/instance: hazelcast-operator
+    app.kubernetes.io/managed-by: hazelcast-operator
 rules:
   - apiGroups:
     - ""
@@ -76,7 +76,7 @@ rules:
   - apiGroups:
     - apps
     resourceNames:
-    - hazelcast-enterprise-operator
+    - hazelcast-operator
     resources:
     - deployments/finalizers
     verbs:
@@ -93,15 +93,15 @@ rules:
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: hazelcast-enterprise-operator
+  name: hazelcast-operator
   labels:
-    app.kubernetes.io/name: hazelcast-enterprise-operator
-    app.kubernetes.io/instance: hazelcast-enterprise-operator
-    app.kubernetes.io/managed-by: hazelcast-enterprise-operator
+    app.kubernetes.io/name: hazelcast-operator
+    app.kubernetes.io/instance: hazelcast-operator
+    app.kubernetes.io/managed-by: hazelcast-operator
 subjects:
 - kind: ServiceAccount
-  name: hazelcast-enterprise-operator
+  name: hazelcast-operator
 roleRef:
   kind: ClusterRole
-  name: hazelcast-enterprise-operator
+  name: hazelcast-operator
   apiGroup: rbac.authorization.k8s.io
