--- a/hazelcast-rbac.yaml
+++ b/hazelcast-rbac.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/name: hazelcast
     app.kubernetes.io/instance: hazelcast
-    app.kubernetes.io/managed-by: hazelcast-enterprise-operator
+    app.kubernetes.io/managed-by: hazelcast-operator
 
 ---
 
@@ -16,7 +16,7 @@ metadata:
   labels:
     app.kubernetes.io/name: hazelcast
     app.kubernetes.io/instance: hazelcast
-    app.kubernetes.io/managed-by: hazelcast-enterprise-operator
+    app.kubernetes.io/managed-by: hazelcast-operator
 rules:
 - apiGroups:
   - ""
@@ -36,7 +36,7 @@ metadata:
   labels:
     app.kubernetes.io/name: hazelcast
     app.kubernetes.io/instance: hazelcast
-    app.kubernetes.io/managed-by: hazelcast-enterprise-operator
+    app.kubernetes.io/managed-by: hazelcast-operator
 subjects:
 - kind: ServiceAccount
   name: hazelcast
