--- a/hazelcast.yaml
+++ b/hazelcast.yaml
@@ -5,47 +5,13 @@ metadata:
   labels:
     app.kubernetes.io/name: hazelcast
     app.kubernetes.io/instance: hazelcast
-    app.kubernetes.io/managed-by: hazelcast-enterprise-operator
+    app.kubernetes.io/managed-by: hazelcast-operator
 spec:
-  hazelcast:
-    licenseKeySecretName: hz-license-key-secret
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: beta.kubernetes.io/arch
-            operator: In
-            values:
-            - amd64
-  resources:
-    requests:
-      memory: 1024Mi
-      cpu: 100m
-    limits:
-      memory: 1024Mi
   securityContext:
     runAsUser: ""
     fsGroup: ""
-  mancenter:
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-          - matchExpressions:
-            - key: beta.kubernetes.io/arch
-              operator: In
-              values:
-              - amd64
-    resources:
-      requests:
-        memory: 1024Mi
-        cpu: 100m
-      limits:
-        memory: 1024Mi
   rbac:
     create: false
-
   serviceAccount:
     create: false
     name: hazelcast
